# smartcity-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  ethiopia_smartcity_dataset.json  pyproject.toml  requirements-test.txt  start.bash  start.bat
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 20260501_0001_create_initial_tables.py  ded975a08d57_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/db/models/: __init__.py  chunk.py  document.py  feedback.py  query_log.py  user.py
app/db/repositories/: chunk_repository.py  (+3 more)
app/integrations/: gemini_client.py  openai_client.py  qdrant_client.py  redis_client.py
app/rag/: chunking.py  citations.py  context_builder.py  embeddings.py  fallbacks.py  generation.py  pipeline.py  prompts.py  retrieval.py
app/schemas/: chat.py  document.py  feedback.py  search.py
app/services/: chat_service.py  dataset_service.py  document_service.py  feedback_service.py  file_parsers.py  health_check_service.py  ingestion_service.py  search_service.py
data/sample/: broken_streetlight_guide.txt
docs/: TECHNICAL_REPORT.md  api.md  architecture.md  setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
scripts/: convert_data.py  seed_sample_data.py  start-prod.sh
tests/: conftest.py  test_local_fallback.py
tests/integration/: test_health.py
(+15 files in other folders)
