[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcity-assistant"
version = "0.1.0"
description = "Backend for the SmartCity RAG Assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.31,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "redis>=5.0.8,<6.0.0",
  "qdrant-client>=1.10.1,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "requests>=2.32.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.5.7,<1.0.0",
]
ai = [
  "openai>=1.40.0,<2.0.0",
  "google-genai>=0.8.0,<1.0.0",
]
embeddings = [
  "sentence-transformers>=3.0.1,<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
